<resources>
    <string name="app_name">Practical Test 02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="op1">Operand 1</string>
    <string name="op2">Operand 2</string>
    <string name="information_type">Information Type</string>
    <string name="calculate">Calculate</string>
    <string-array name="information_types">
        <item>add</item>
        <item>mul</item>
    </string-array>
</resources>
